# wamv_autonomous_ws

./: .gitignore  README.md
src/autonomous_stack_interfaces/: CMakeLists.txt  package.xml
src/autonomous_stack_interfaces/msg/: StampedFloat64MultiArray.msg
src/perception_stack/: package.xml  setup.py
src/perception_stack/config/: sensor_params.yaml
src/perception_stack/launch/: obstacle_awareness.launch.py
src/perception_stack/my_model/train/: results.csv
src/perception_stack/perception_stack/: obstacle_detection.py  sensor_fusion.py
src/point_lio_ros2/PCD/: frames_2025-08-19_17.46.44.gv  scans.pcd
src/point_lio_ros2/config/: mid360.yaml  ouster64.yaml  unilidar_l1.yaml  wamv_lidar.yaml
src/point_lio_ros2/launch/: mapping_unilidar_l1.launch.py  mapping_wamv_lidar.launch.py
src/point_lio_ros2/src/: laserMapping.cpp  preprocess.cpp  preprocess.h
src/slam_nav_stack/: package.xml  setup.cfg  setup.py
src/slam_nav_stack/config/: slam_params.yaml
src/slam_nav_stack/slam_nav_stack/: preprocess_lidar.py  test.py  tf_camera_init.py
src/teleop_ctrl/: package.xml  setup.py
src/teleop_ctrl/teleop_ctrl/: teleop_keyboard.py
src/unitree_lidar_ros2/: CMakeLists.txt  package.xml
src/unitree_lidar_sdk/: CMakeLists.txt
